export const snapshot = {};

snapshot[`planner 1`] = `
[
  {
    id: "one",
    node: "one",
    path: [
      "one",
    ],
    type: {
      title: "function_24",
      type: "function",
    },
  },
  {
    id: "one.id",
    node: "id",
    path: [
      "one",
      "id",
    ],
    type: {
      format: "uuid",
      title: "string_1",
      type: "string",
    },
  },
  {
    id: "one.email",
    node: "email",
    path: [
      "one",
      "email",
    ],
    type: {
      format: "email",
      title: "string_2",
      type: "string",
    },
  },
  {
    id: "one.nested",
    node: "nested",
    path: [
      "one",
      "nested",
    ],
    type: {
      title: "object_8",
      type: "object",
    },
  },
  {
    id: "one.nested.first",
    node: "first",
    path: [
      "one",
      "nested",
      "first",
    ],
    type: {
      title: "string_3",
      type: "string",
    },
  },
  {
    id: "one.nested.second",
    node: "second",
    path: [
      "one",
      "nested",
      "second",
    ],
    type: {
      title: "array_5",
      type: "array",
    },
  },
  {
    id: "one.nested.third",
    node: "third",
    path: [
      "one",
      "nested",
      "third",
    ],
    type: {
      title: "optional_7",
      type: "optional",
    },
  },
]
`;

snapshot[`planner 2`] = `
{
  one: {
    funcType: {
      config: {},
      input: 2,
      materializer: 1,
      output: 3,
      policies: [
        0,
      ],
      rate_calls: false,
      rate_weight: null,
      runtime: 0,
      title: "function_24",
      type: "function",
    },
    referencedTypes: {
      "one.email": [
        {
          title: "string_2",
          type: "string",
        },
      ],
      "one.id": [
        {
          title: "string_1",
          type: "string",
        },
      ],
      "one.nested": [
        {
          title: "object_8",
          type: "object",
        },
      ],
      "one.nested.first": [
        {
          title: "string_3",
          type: "string",
        },
      ],
      "one.nested.second": [
        {
          title: "array_5",
          type: "array",
        },
        {
          title: "number_4",
          type: "number",
        },
      ],
      "one.nested.third": [
        {
          title: "optional_7",
          type: "optional",
        },
        {
          title: "boolean_6",
          type: "boolean",
        },
      ],
      one: [
        {
          title: "function_24",
          type: "function",
        },
        {
          title: "object_21",
          type: "object",
        },
        {
          title: "object_23",
          type: "object",
        },
      ],
    },
  },
}
`;

snapshot[`planner 3`] = `
[
  "one  one  one  object  object_21  false",
  "one.union1  union1  one/union1  union  union_11  false",
  "one.union2  union2  one/union2  union  union_20  false",
  "one.union2\$A.a  a  one/union2\$A/a  integer  integer_12  false",
  "one.union2\$B.b  b  one/union2\$B/b  either  either_18  false",
  "one.union2\$B.b\$C1.c  c  one/union2\$B/b\$C1/c  integer  integer_14  false",
  "one.union2\$B.b\$C2.c  c  one/union2\$B/b\$C2/c  string  string_16  false",
]
`;

snapshot[`planner: dependencies 1`] = `
[
  "two  two  two  object  object_42  false",
  "two.id  id  two/id  integer  integer_26  false",
  "two.email  email  two/email  string  UserEmail  false",
]
`;

snapshot[`planner: dependencies 2`] = `
[
  "two  two  two  object  object_42  false",
  "two.id  id  two/id  integer  integer_26  false",
  "two.email  email  two/email  string  UserEmail  false",
  "two.profile  profile  two/profile  object  object_34  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_31  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_32  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_33  false",
]
`;

snapshot[`planner: dependencies 3`] = `
[
  "two  two  two  object  object_42  false",
  "two.id  id  two/id  integer  integer_26  false",
  "two.email  email  two/email  string  UserEmail  false",
  "two.profile  profile  two/profile  object  object_34  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_31  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_32  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_33  false",
]
`;

snapshot[`planner: dependencies 4`] = `
[
  "two  two  two  object  object_42  false",
  "two.email  email  two/email  string  UserEmail  true",
  "two.profile  profile  two/profile  object  object_34  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_31  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_32  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_33  false",
  "two.id  id  two/id  integer  integer_26  false",
]
`;

snapshot[`planner: dependencies 5`] = `
[
  "two  two  two  object  object_42  false",
  "two.email  email  two/email  string  UserEmail  true",
  "two.profile  profile  two/profile  object  object_34  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_31  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_32  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_33  false",
  "two.taggedPic  taggedPic  two/taggedPic  string  string_40  false",
]
`;

snapshot[`planner: dependencies 6`] = `
[
  "two  two  two  object  object_42  false",
  "two.id  id  two/id  integer  integer_26  false",
  "two.email  email  two/email  string  UserEmail  true",
  "two.profile  profile  two/profile  object  object_34  true",
  "two.profile.email  email  two/profile/email  string  string_30  false",
  "two.profile.firstName  firstName  two/profile/firstName  string  string_31  false",
  "two.profile.lastName  lastName  two/profile/lastName  string  string_32  false",
  "two.profile.profilePic  profilePic  two/profile/profilePic  string  string_33  false",
  "two.taggedPic  taggedPic  two/taggedPic  string  string_40  false",
]
`;
